--- a/index.html
+++ b/index.html
@@ -4,79 +4,33 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Esculturas de Arte Africano</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f8f5f2;
-    }
-
-    header {
-      background: #2d2d2d;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-
-    .hero {
-      background: url('FOTO-DE-TU-ESCULTURA.jpg') center/cover no-repeat;
-      height: 300px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 2rem;
-      font-weight: bold;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
-    }
-
-    .section {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-
-    .gallery img {
-      width: 100%;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #2d2d2d;
-      color: white;
-      margin-top: 40px;
-    }
-  </style>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <header>
-    <h1>Esculturas de Arte Africano</h1>
+<body class="bg-neutral-100 text-neutral-900">
+  <!-- Header -->
+  <header class="bg-neutral-900 text-white py-6 shadow-lg">
+    <h1 class="text-center text-3xl font-bold tracking-wide uppercase">Esculturas de Arte Africano</h1>
   </header>
 
-  <div class="hero">
-    Tu colección única
-  </div>
+  <!-- Hero -->
+  <section class="relative h-96 flex items-center justify-center bg-cover bg-center" style="background-image: url('FOTO-DE-TU-ESCULTURA.JPG');">
+    <div class="bg-black/50 p-6 rounded-xl">
+      <h2 class="text-white text-4xl md:text-5xl font-bold">Colección Única</h2>
+    </div>
+  </section>
 
-  <section class="section">
-    <h2>Sobre mi trabajo</h2>
-    <p>
+  <!-- Sobre mí -->
+  <section class="max-w-4xl mx-auto p-6 mt-10">
+    <h2 class="text-3xl font-semibold mb-4">Sobre mi trabajo</h2>
+    <p class="text-lg leading-relaxed">
       Bienvenido/a a mi espacio digital. Aquí encontrarás una selección de esculturas inspiradas en la riqueza cultural del continente africano. Cada pieza refleja tradición, simbolismo y expresión artística.
     </p>
   </section>
 
-  <section class="section">
-    <h2>Galería</h2>
-    <div class="gallery">
-      <!-- Añade aquí tus fotos reales reemplazando los nombres -->
+  <!-- Galería -->
+  <section class="max-w-6xl mx-auto p-6 mt-10">
+    <h2 class="text-3xl font-semibold mb-6">Galería</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
       <img src="mis_fotos/DSC_2412.JPG" alt="Escultura africana 1" />
       <img src="mis_fotos/DSC_2427.JPG" alt="Escultura africana 2" />
       <img src="mis_fotos/DSC_2432.JPG" alt="Escultura africana 3" />
@@ -101,19 +55,24 @@
       <img src="mis_fotos/DSC_2392.JPG" alt="Escultura africana 6" />
       <img src="mis_fotos/DSC_2406.JPG" alt="Escultura africana 6" />
       <img src="mis_fotos/DSC_2421.JPG" alt="Escultura africana 6" />
-      
     </div>
   </section>
 
   <!-- Contacto -->
-<section class="max-w-4xl mx-auto p-6 mt-12 bg-white rounded-2xl shadow-md">
-<h2 class="text-3xl font-semibold mb-4">Contacto</h2>
-<p class="text-lg mb-4">Si deseas adquirir una pieza o solicitar información, contáctame directamente:</p>
-<a href="https://wa.me/123456789" class="inline-block bg-green-600 text-white px-6 py-3 rounded-xl text-lg font-medium hover:bg-green-700 transition">WhatsApp</a>
-</section>
+  <section class="max-w-4xl mx-auto p-6 mt-12 bg-white rounded-2xl shadow-md">
+    <h2 class="text-3xl font-semibold mb-4">Contacto</h2>
+    <p class="text-lg mb-4">Si deseas adquirir una pieza o solicitar información, contáctame directamente:</p>
+    <a href="https://wa.me/123456789" class="inline-flex items-center bg-green-600 text-white px-6 py-3 rounded-xl text-lg font-medium hover:bg-green-700 transition">
+      <svg fill="currentColor" viewBox="0 0 32 32" class="w-6 h-6 mr-2">
+        <path d="M16.001 2.667c-7.364 0-13.334 5.97-13.334 13.333 0 2.355.614 4.648 1.782 6.667L2.667 29.333l6.833-1.729c1.97 1.075 4.206 1.642 6.501 1.642h.001c7.364 0 13.333-5.97 13.333-13.333S23.365 2.667 16.001 2.667zM16 26.667h-.001c-2.033 0-4.021-.533-5.771-1.542l-.414-.237-4.053 1.026 1.078-3.958-.27-.406a11.29 11.29 0 01-1.788-6.082c0-6.255 5.089-11.333 11.333-11.333 6.255 0 11.334 5.078 11.334 11.333 0 6.255-5.079 11.334-11.334 11.334zm6.154-8.62c-.337-.169-1.988-.983-2.299-1.095-.309-.115-.534-.169-.758.168-.225.337-.87 1.095-1.067 1.32-.197.225-.394.253-.731.084-.337-.169-1.423-.525-2.708-1.676-1-.893-1.675-1.996-1.871-2.333-.197-.337-.021-.52.148-.688.152-.151.337-.394.506-.591.168-.197.225-.337.337-.563.112-.225.056-.422-.028-.591-.084-.168-.758-1.832-1.039-2.506-.273-.653-.552-.564-.758-.572l-.648-.013c-.225 0-.591.084-.898.422-.309.337-1.18 1.151-1.18 2.807 0 1.656 1.209 3.255 1.377 3.479.168.225 2.381 3.63 5.773 5.087.807.348 1.436.556 1.926.713.81.258 1.548.222 2.13.135.65-.097 1.988-.811 2.269-1.594.28-.782.28-1.453.197-1.594-.084-.141-.309-.225-.646-.394z"></path>
+      </svg>
+      WhatsApp
+    </a>
+  </section>
 
-  <footer>
-    © 2025 Manuel Gala - Arte Africano
+  <!-- Footer -->
+  <footer class="text-center py-6 mt-12 bg-neutral-900 text-white">
+    © 2025 Tu Nombre - Arte Africano
   </footer>
 </body>
 </html>
