--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
   </section>
 
   <!-- Sobre mí -->
-  <section class="max-w-4xl mx-auto p-6 mt-10">
-    <h2 class="text-3xl font-semibold mb-4">Sobre mi trabajo</h2>
-    <p class="text-lg leading-relaxed">
-      Bienvenido/a a mi espacio digital. Aquí encontrarás una selección de esculturas inspiradas en la riqueza cultural del continente africano. Cada pieza refleja tradición, simbolismo y expresión artística.
-    </p>
+   <section class="relative h-72 flex items-center justify-center bg-contain bg-no-repeat bg-center" style="background-image: url('FOTO-DE-TU-ESCULTURA.JPG');">
+    <div class="bg-black/50 p-4 rounded-xl">
+      <h2 class="text-white text-2xl md:text-3xl font-bold">Colección Única</h2>
+    </div>
   </section>
 
   <!-- Galería -->
