--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <h1 class="text-center text-3xl font-bold tracking-wide uppercase">Esculturas de Arte Africano</h1>
   </header>
 
-  <!-- Hero -->
+  <!-- Hero
   <section class="relative h-96 flex items-center justify-center bg-cover bg-center" style="background-image: url('FOTO-DE-TU-ESCULTURA.JPG');">
     <div class="bg-black/50 p-6 rounded-xl">
       <h2 class="text-white text-4xl md:text-5xl font-bold">Colección Única</h2>
     </div>
-  </section>
+  </section> -->
 
   <!-- Sobre mí -->
    <section class="relative h-72 flex items-center justify-center bg-contain bg-no-repeat bg-center" style="background-image: url('FOTO-DE-TU-ESCULTURA.JPG');">
