--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Puedes añadir TANTAS filas como quieras: cada 8 imágenes crean automáticamente una nueva fila -->
     <div class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-8 gap-4">
       <!-- EJEMPLOS — añade o quita los que necesites -->
-      <a href="piezasbroncehtml/pieza_bronce1.html"><img src="./mis_fotos/bronces/bronce1.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
+      <a href="piezasbroncehtml/pieza_bronce1.html"><img src="mis_fotos/bronces/bronce1.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
       <a href="piezasbroncehtml/pieza_bronce2.html"><img src="mis_fotos/bronces/bronce2.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
       <a href="piezasbroncehtml/pieza_bronce3.html"><img src="mis_fotos/bronces/bronce3.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
       <a href="piezasbroncehtml/pieza_bronce4.html"><img src="mis_fotos/bronces/bronce4.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
