--- a/piezascascohtml/pieza_casco1.html
+++ b/piezascascohtml/pieza_casco1.html
@@ -19,7 +19,7 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/cascos/casco1.jpg" class="glightbox">
+        <a href="../mis_fotos/cascos/casco1.JPG" class="glightbox">
           <img src="../mis_fotos/cascos/casco1.JPG" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce foto 1" />
         </a>
       </div>
@@ -44,7 +44,7 @@
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="mis_fotos/cascos/casco1_1.jpg" class="glightbox"><img src="mis_fotos/cascos/cascos1_1.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
+      <a href="mis_fotos/cascos/casco1_1.JPG" class="glightbox"><img src="mis_fotos/cascos/cascos1_1.JPG" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
       <a href="mis_fotos/cascos/casco1_2.jpg" class="glightbox"><img src="mis_fotos/cascos/casco1_2.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
       
     </div>
