--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <a href="piezascascohtml/pieza_casco5.html"><img src="mis_fotos/cascos/casco5.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
       <a href="piezascascohtml/pieza_casco6.html"><img src="mis_fotos/cascos/casco6.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
       <a href="piezascascohtml/pieza_casco7.html"><img src="mis_fotos/cascos/casco7.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
-      <a href="piezascascohtml/pieza_casco8.html"><img src="mis_fotos/cascos/casco8.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
+      <a href="piezascascohtml/pieza_casco8.html"><img src="mis_fotos/cascos/casco8.jpg" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
 
 
 
