--- a/piezascascohtml/pieza_casco2.html
+++ b/piezascascohtml/pieza_casco2.html
@@ -45,7 +45,7 @@
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
       <a href="../mis_fotos/cascos/casco2_1.JPG" class="glightbox"><img src="../mis_fotos/cascos/casco2_1.JPG" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza casco foto 2" /></a>
-      <a href="../mis_fotos/cascos/casco2_2.jpg" class="glightbox"><img src="../mis_fotos/cascos/casco2_2.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
+      <a href="../mis_fotos/cascos/casco2_2.JPG" class="glightbox"><img src="../mis_fotos/cascos/casco2_2.JPG" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
       
     </div>
 
