--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
     <!-- CASCOS -->
     <h3 class="text-2xl font-semibold mt-10 mb-4">Cascos</h3>
     <div class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-8 gap-4">
-      <a href="piezascascohtml/pieza_casco1.html"><img src="mis_fotos/cascos/casco1.JPGpg" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
-      <a href="piezascascohtml/pieza_casco2.html"><img src="mis_fotos/cascos/casco2.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
-      <a href="piezascascohtml/pieza_casco3.html"><img src="mis_fotos/cascos/casco3.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
-      <a href="piezascascohtml/pieza_casco4.html"><img src="mis_fotos/cascos/casco4.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
-      <a href="piezascascohtml/pieza_casco5.html"><img src="mis_fotos/cascos/casco5.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
-      <a href="piezascascohtml/pieza_casco6.html"><img src="mis_fotos/cascos/casco6.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
-      <a href="piezascascohtml/pieza_casco7.html"><img src="mis_fotos/cascos/casco7.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
-      <a href="piezascascohtml/pieza_casco8.html"><img src="mis_fotos/cascos/casco8.JPG" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
+      <a href="piezascascohtml/pieza_casco1.html"><img src="mis_fotos/cascos/casco1.jpeg" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
+      <a href="piezascascohtml/pieza_casco2.html"><img src="mis_fotos/cascos/casco2.jpeg" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
+      <a href="piezascascohtml/pieza_casco3.html"><img src="mis_fotos/cascos/casco3.jpeg" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
+      <a href="piezascascohtml/pieza_casco4.html"><img src="mis_fotos/cascos/casco4.jpeg" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
+      <a href="piezascascohtml/pieza_casco5.html"><img src="mis_fotos/cascos/casco5.jpeg" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
+      <a href="piezascascohtml/pieza_casco6.html"><img src="mis_fotos/cascos/casco6.jpeg" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
+      <a href="piezascascohtml/pieza_casco7.html"><img src="mis_fotos/cascos/casco7.jpeg" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
+      <a href="piezascascohtml/pieza_casco8.html"><img src="mis_fotos/cascos/casco8.jpeg" class="rounded-xl shadow-md object-cover w-full h-28" /></a>
 
 
 
