--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <!-- Puedes añadir TANTAS filas como quieras: cada 8 imágenes crean automáticamente una nueva fila -->
     <div class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-8 gap-4">
       <!-- EJEMPLOS — añade o quita los que necesites -->object-c
-      <a href="piezasbroncehtml/pieza_bronce1.html"><img src="mis_fotos/bronces/bronce1.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-white" /></a>
-      <a href="piezasbroncehtml/pieza_bronce2.html"><img src="mis_fotos/bronces/bronce2.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-white" /></a>
-      <a href="piezasbroncehtml/pieza_bronce3.html"><img src="mis_fotos/bronces/bronce3.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-white" /></a>
-      <a href="piezasbroncehtml/pieza_bronce4.html"><img src="mis_fotos/bronces/bronce4.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-white" /></a>
-      <a href="piezasbroncehtml/pieza_bronce5.html"><img src="mis_fotos/bronces/bronce5.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-white" /></a>
-      <a href="piezasbroncehtml/pieza_bronce6.html"><img src="mis_fotos/bronces/bronce6.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-white"-cover w-full h-28" /></a>
-      <a href="piezasbroncehtml/pieza_bronce7.html"><img src="mis_fotos/bronces/bronce7.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-white" /></a>
+      <a href="piezasbroncehtml/pieza_bronce1.html"><img src="mis_fotos/bronces/bronce1.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
+      <a href="piezasbroncehtml/pieza_bronce2.html"><img src="mis_fotos/bronces/bronce2.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-yellow-50" /></a>
+      <a href="piezasbroncehtml/pieza_bronce3.html"><img src="mis_fotos/bronces/bronce3.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-red" /></a>
+      <a href="piezasbroncehtml/pieza_bronce4.html"><img src="mis_fotos/bronces/bronce4.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-green-600" /></a>
+      <a href="piezasbroncehtml/pieza_bronce5.html"><img src="mis_fotos/bronces/bronce5.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-gray-100" /></a>
+      <a href="piezasbroncehtml/pieza_bronce6.html"><img src="mis_fotos/bronces/bronce6.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-brown" /></a>
+      <a href="piezasbroncehtml/pieza_bronce7.html"><img src="mis_fotos/bronces/bronce7.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-orange" /></a>
       <a href="piezasbroncehtml/pieza_bronce8.html"><img src="mis_fotos/bronces/bronce8.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-white" /></a>
       <a href="piezasbroncehtml/pieza_bronce9.html"><img src="mis_fotos/bronces/bronce9.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-white" /></a>
       <a href="piezasbroncehtml/pieza_bronce10.html"><img src="mis_fotos/bronces/bronce10.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-white" /></a>
