--- a/piezasestatuahtml/pieza_estatua24.html
+++ b/piezasestatuahtml/pieza_estatua24.html
@@ -19,8 +19,8 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/estatuas/estatua24.JPG" class="glightbox">
-          <img src="../mis_fotos/estatuas/estatua24.JPG" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza estatua foto 24" />
+        <a href="../mis_fotos/estatuas/estatua24.jpeg" class="glightbox">
+          <img src="../mis_fotos/estatuas/estatua24.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza estatua foto 24" />
         </a>
       </div>
 
@@ -45,7 +45,7 @@
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
       <a href="../mis_fotos/estatuas/estatua24_1.jpg" class="glightbox"><img src="../mis_fotos/estatuas/estatua24_1.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza estatua foto 24_1" /></a>
-      <a href="../mis_fotos/estatuas/estatua24_2.jpg" class="glightbox"><img src="../mis_fotos/estatuas/estatua24_2.JPG" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza estatua foto 24_2" /></a>
+      <a href="../mis_fotos/estatuas/estatua24_2.jpg" class="glightbox"><img src="../mis_fotos/estatuas/estatua24_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza estatua foto 24_2" /></a>
       <a href="mis_fotos/bronces/bronce1_4.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
     </div>
 
