--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <a href="piezasmascarahtml/pieza_mascara5.html"><img src="mis_fotos/mascaras/mascara5.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
 <a href="piezasmascarahtml/pieza_mascara6.html"><img src="mis_fotos/mascaras/mascara6.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
 <a href="piezasmascarahtml/pieza_mascara7.html"><img src="mis_fotos/mascaras/mascara7.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
-<a href="piezasmascarahtml/pieza_mascara8.html"><img src="mis_fotos/mascaras/mascara8.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
+<a href="piezasmascarahtml/pieza_mascara8.html"><img src="mis_fotos/mascaras/mascara8.jpg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
 <a href="piezasmascarahtml/pieza_mascara9.html"><img src="mis_fotos/mascaras/mascara9.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
 <a href="piezasmascarahtml/pieza_mascara10.html"><img src="mis_fotos/mascaras/mascara10.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
 <a href="piezasmascarahtml/pieza_mascara11.html"><img src="mis_fotos/mascaras/mascara11.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
