--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
 
   <!-- Sobre mí -->
-   <section class="relative h-72 flex items-center justify-center bg-contain bg-no-repeat bg-center" style="background-image: url('FOTO-DE-TU-ESCULTURA.jpeg');">
+   <section class="relative h-72 flex items-center justify-center bg-contain bg-no-repeat bg-center" style="background-image: url('FOTO-DE-TU-ESCULTURA.jpg');">
     <div class="bg-black/50 p-4 rounded-xl">
       <h2 class="text-white text-2xl md:text-3xl font-bold">Colección Única</h2>
     </div>
