--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
   </header>
 
   <!-- Sobre mí -->
-   <section class="relative h-72 flex items-center justify-center bg-contain bg-no-repeat bg-center" style="background-image: url('FOTO-DE-TU-ESCULTURA.jpg');">
+   <section class="relative h-72 flex items-center justify-center bg-contain bg-no-repeat bg-center" style="background-image: url('mis_fotos/estatuas/estatua5.jpeg');">
     <div class="bg-black/50 p-4 rounded-xl">
       <h2 class="text-white text-2xl md:text-3xl font-bold">Colección Única</h2>
     </div>
   </section>
+
+
 
   <!-- Nueva sección de categorías con 8 fotos por fila -->
   <section class="max-w-7xl mx-auto p-6 mt-10">
