--- a/piezasbroncehtml/pieza_bronce13.html
+++ b/piezasbroncehtml/pieza_bronce13.html
@@ -27,15 +27,24 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce Kalabo sobre camaleon</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+          Pieza de bronce posiblemente origen Senufo.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+          Significado simbólico:
+
+El ave (kalabo) representa vigilancia, poder espiritual o protección
+
+El camaleón representa adaptación, paciencia, observación
+
+Juntos, podrían simbolizar la armonía entre lo espiritual y lo terrenal, o poder y sabiduría combinados
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
+          <li><strong>Tamaño:</strong> 10 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Burkina Faso</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
