--- a/piezasbroncehtml/pieza_bronce6.html
+++ b/piezasbroncehtml/pieza_bronce6.html
@@ -27,15 +27,28 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Cabeza bronce Ife</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+          Ile‑Ifẹ es una ciudad tradicional del pueblo Yoruba, en el suroeste de Nigeria — considerado el centro espiritual e histórico de los Yoruba. 
+
+
+Según la tradición Yoruba, Ife es la “cuna de la humanidad” y el lugar donde la civilización Yoruba — y en sentido simbólico, el mundo — comenzó.
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Técnica avanzada: la fundición de metal tan refinada, con detalles finos y moldes delgados, demuestra un nivel tecnológico sobresaliente en el África medieval. 
+
+
+Realismo y naturalismo: contrastaban con la idea occidental de “arte primitivo africano”; su realismo asombró a los primeros exploradores europeos y cambió la percepción global sobre las capacidades artísticas de las sociedades africanas. 
+
+
+Valor cultural e histórico: atestiguan una civilización compleja, organizada, con sentido estético, espiritual y político; documentan una etapa brillante del pasado Yoruba.
+        </p>
+
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Suroeste de Nigeria</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
