--- a/piezasbroncehtml/pieza_bronce9.html
+++ b/piezasbroncehtml/pieza_bronce9.html
@@ -19,22 +19,34 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/bronces/bronce9.JPG" class="glightbox">
-          <img src="../mis_fotos/bronces/bronce9.JPG" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
+        <a href="../mis_fotos/bronces/bronce9.JPeG" class="glightbox">
+          <img src="../mis_fotos/bronces/bronce9.JPeG" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
         </a>
       </div>
 
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Recipiente ofrendas Baulé</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        Recipiente ritual utilizado por el pueblo Baulé (Akan) de Costa de Marfil, fabricado mediante técnicas de fundición en bronce (cire perdue / cera perdida).
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+        Es una caja o recipiente ritual en el que se depositaban: ofrendas (dinero, alimentos, nueces de kola, perfumes)
+
+objetos protectores
+
+amuletos
+
+sustancias usadas por adivinos o sacerdotes (komian)
+
+Normalmente se fabrican en bronce, aunque también pueden existir en latón (messing).
+        </p>
+
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
+          <li><strong>Origen:</strong> Costa de Marfil</li>
           <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
         </ul>
       </div>
@@ -44,7 +56,7 @@
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/bronces/bronce6_1.jpg" class="glightbox"><img src="../mis_fotos/bronces/bronce6_1.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
+      <a href="../mis_fotos/bronces/bronce6_1.jpeg" class="glightbox"><img src="../mis_fotos/bronces/bronce6_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
       <a href="mis_fotos/bronces/bronce1_3.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_3.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
       <a href="mis_fotos/bronces/bronce1_4.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
     </div>
