--- a/piezasbroncehtml/pieza_bronce14.html
+++ b/piezasbroncehtml/pieza_bronce14.html
@@ -27,15 +27,23 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce caballero Dogón</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+          Estas esculturas fueron realizadas por herreros de la casta especializada en metalurgia entre los Dogon (conocidos tradicionalmente como “irím” — los “hombres del fuego”). 
+
+
+Las técnicas usadas son análogas a las empleadas en otras zonas de África para broncería: fundición mediante cera perdida (“lost‑wax casting”).
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+          Escultura en bronce que representa dos figuras montadas en un caballo —  “cavaliers Dogon”. Estas piezas suelen ser estilizadas, con proporciones propias del arte tradicional.
+        </p>
+
+
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
+          <li><strong>Tamaño:</strong> 10 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Mali</li>
+         <!---- <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
