--- a/piezascascohtml/pieza_casco4.html
+++ b/piezascascohtml/pieza_casco4.html
@@ -27,15 +27,23 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Mascara-casco Bambara (Bamana)</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+         En la cultura Bambara, algunas máscaras no son solo “máscaras faciales” sino “máscaras-casco” (helmet mask), es decir: cubren la cabeza entera del portador.
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+        Estas máscaras las confeccionan artesanos especializados — frecuentemente herreros o “numu” — porque combinan madera tallada con materiales simbólicos y rituales
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+          Su propósito no es meramente decorativo o festivo: representan poder espiritual, protección, autoridad — vinculado con sociedades secretas/rituales tradicionales
+        </p>
+
+
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
