--- a/piezascascohtml/pieza_casco5.html
+++ b/piezascascohtml/pieza_casco5.html
@@ -27,15 +27,21 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Casco Bozo</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+          Los cascos Bozo son máscaras de madera que cubren la cabeza como un casco, es decir, se encajan completamente sobre el cráneo del danzante. Se usan principalmente en espectáculos públicos y rituales.
+          <br>
+          Los Bozo son un grupo étnico de Mali, asentado principalmente a lo largo del río Níger, en ciudades como Mopti, Djenné y Ségou.
+
+Tradicionalmente pescadores, barqueros y guardianes de rituales acuáticos.
+
+Su arte está profundamente vinculado al agua, a los animales del río y a mitologías sobre los genios del agua (nyama o farin).
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera y Cobre</li>
+          <li><strong>Origen:</strong> Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
