--- a/piezasestatuahtml/pieza_estatua20.html
+++ b/piezasestatuahtml/pieza_estatua20.html
@@ -27,15 +27,19 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua "maternité Bamun"</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+          Las “maternity figures” o “figuras de maternidad” dentro del contexto Bamun representan el ideal de la maternidad, la fertilidad, la protección y el papel central de la mujer como madre y nutricia del linaje.
+        </p>
+
+         <p class="text-lg leading-relaxed mb-4 text-gray-200">
+          En particular, hay descripciones de figuras femeninas — a veces con un bebé — talladas en madera por el pueblo Bamun, en la región de los “Grassfields” del Camerún
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Camerún</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
