--- a/piezasestatuahtml/pieza_estatua26.html
+++ b/piezasestatuahtml/pieza_estatua26.html
@@ -27,15 +27,20 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Figura Baulé</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+          Son esculturas tradicionales talladas en madera, generalmente figuras humanas de apariencia serena y equilibrada.
+Su función suele ser espiritual, ritual o protectora, no decorativa.
+<br>
+La cultura baulé (o baule) es originaria de África Occidental, específicamente del centro-sur de Costa de Marfil.
+
+Su territorio tradicional se encuentra en una amplia zona que incluye ciudades como Bouaké, Yamoussoukro y Gohitafla, dentro de la sabana y el bosque tropical marfileño.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Costa de Marfil</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
