--- a/piezasestatuahtml/pieza_estatua6.html
+++ b/piezasestatuahtml/pieza_estatua6.html
@@ -27,15 +27,27 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Senufo deble</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+          Un deble es una figura espiritual tallada en madera que sirve como mediador entre los humanos y los seres sobrenaturales. Los Senufo creen que estas esculturas albergan la presencia o fuerza de un espíritu protector.
+<br>
+
+
+Son iguras humanas estilizadas, generalmente femeninas, aunque también las hay masculinas.
+
+Proporciones alargadas y una actitud hierática (postura rígida, solemne).
+
+Ojos semicalados, mandíbula marcada, pechos prominentes en figuras femeninas.
+
+Brazos pegados al cuerpo y manos apoyadas sobre el vientre o los muslos.
+
+Madera oscura con pátina producida por la manipulación ritual.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 100 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Región Costa de Marfil/ Sur de Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
