--- a/piezasestatuahtml/pieza_estatua10.html
+++ b/piezasestatuahtml/pieza_estatua10.html
@@ -27,15 +27,26 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Muñeca Ere Ibeji (Youruba)</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+         Representa a un gemelo.
+
+Se usa cuando uno o ambos gemelos mueren.
+
+Los Yoruba tienen una de las tasas de gemelos más altas del mundo y creen que el espíritu del gemelo debe ser cuidado.
+
+La madre o familia visten, bañan y alimentan simbólicamente la figura.
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+         Los artistas tradicionales Yoruba son muy precisos: sus figuras tienen simetría, proporción y equilibrio, lo que las hace muy reconocibles.
+        </p>
+
+
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 15 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Nigeria</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
