--- a/piezasestatuahtml/pieza_estatua14.html
+++ b/piezasestatuahtml/pieza_estatua14.html
@@ -27,15 +27,25 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Yoruba de guerrero</h2>
+       
+         <p class="text-lg leading-relaxed mb-4 text-gray-200">
+          Las estatuas Yoruba de guerreros (Nigeria) forman parte del arte tradicional del pueblo Yoruba, uno de los más influyentes de África Occidental. Suelen provenir de regiones como Oyo, Ijebu, Ife, Ekiti, Abeokuta y otras áreas donde existían linajes guerreros o cultos dedicados a la protección y el poder.
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+        Las estatuas de guerreros Yoruba suelen simbolizar:
+
+Poder militar y autoridad
+
+El guerrero representa a un luchador histórico, un jefe militar o un guardián espiritual.
+        </p>
+
+
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 40 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Nigeria</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
