--- a/piezasestatuahtml/pieza_estatua32.html
+++ b/piezasestatuahtml/pieza_estatua32.html
@@ -27,15 +27,26 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Fetiche Bakongo Kongo</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+          Los nkondi son un tipo específico de nkisi conocidos por sus figuras humanas cubiertas de clavos, cuchillas o punzones.
+Se utilizan para:
+
+Hacer cumplir pactos y juramentos.
+
+Castigar a infractores.
+
+Proteger a la comunidad de peligros o brujería.
+
+Perseguir a espíritus malignos o criminales.
+
+Cada clavo representa una petición, contrato o conflicto en el que el espíritu del nkondi debe intervenir.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Pueblo Kongo. Africa Central</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
