--- a/piezasestatuahtml/pieza_estatua8.html
+++ b/piezasestatuahtml/pieza_estatua8.html
@@ -26,15 +26,23 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Baga</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+         Los Baga son un pueblo de África Occidental que vive a lo largo de la costa Atlántica en la parte sur de Guinea (Guinea-Conakry) y en la costa norte de Guinea-Bissau.
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+         Tradicionalmente eran animistas; aunque muchos adoptaron el islam, la herencia artística y las tradiciones antiguas perduran en sus esculturas y máscaras
+        </p>
+
+         <p class="text-lg leading-relaxed mb-4 text-gray-200">
+         Esculturas ligadas a lo simbólico: algunas representan espíritus protectores, antepasados o fuerzas divinas.
+        </p>
+
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Guinea -Conakry y Guinea Bissau</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
