--- a/piezasmascarahtml/pieza_mascara34.html
+++ b/piezasmascarahtml/pieza_mascara34.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pieza mascara 14</title>
+  <title>Pieza mascara 32</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Lightbox CSS y JS simple -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.2.0/css/glightbox.min.css" integrity="sha512-+KPZs1BTSa6l5vIk91jGJ6dW9UgVSpvGx1Xr2N7m9UTh3f97k2XoZTz2r6H5hVxZx52r6hPSNnD6bk6XkWPMig==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,22 +19,24 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/mascaras/mascara14.jpeg" class="glightbox">
-          <img src="../mis_fotos/mascaras/mascara14.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza mascara foto 14" />
+        <a href="../mis_fotos/mascaras/mascara34.jpg" class="glightbox">
+          <img src="../mis_fotos/mascaras/mascara34.jpg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza mascara foto 32" />
         </a>
       </div>
 
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Mascara Punu.-</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Mascara Chokwe (Tschockwe) </h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Las máscaras africanas blancas de Gabón estaban asociadas a diferentes grupos secretos. La máscara, evocación de una joven mujer muerta era exhibida durante la representacion de una danza llamada Okuyi
+         Esta etnia dispone de una variedad de máscaras relacionadas con los ancestros y diferentes usos sociales. El peinado con abundantes trenzas es una característica de estas máscaras. La cruz de malta de la frente es un símbolo tomado de los primeros misioneros portugueses. 
         </p>
+        
+
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
+          <li><strong>Tamaño:</strong> 30 cm de alto</li>
           <li><strong>Material:</strong> Madera</li>
-          <li><strong>Origen:</strong> Gabón</li>
+          <li><strong>Origen:</strong> Congo, Angola, Zambia</li>
           <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
@@ -44,8 +46,8 @@
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/mascaras/mascara14_1.jpeg" class="glightbox"><img src="../mis_fotos/mascaras/mascara14_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 14" /></a>
-      <a href="mis_fotos/bronces/bronce14_2.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce14_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+      <a href="../mis_fotos/mascaras/mascara34_1.jpeg" class="glightbox"><img src="mis_fotos/mascaras/mascara34_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 32" /></a>
+      <a href="mis_fotos/bronces/bronce34_2.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce34_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
     </div>
 
     <!-- Botón de volver -->
