--- a/piezasmascarahtml/pieza_mascara7.html
+++ b/piezasmascarahtml/pieza_mascara7.html
@@ -27,15 +27,41 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Fang</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+          
+Las máscaras Fang (a veces llamadas Ngil o Ngil Fang) son algunas de las piezas más emblemáticas del arte africano. Pertenecen al pueblo Fang, que vive principalmente en Gabón, Guinea Ecuatorial y el sur de Camerún.
+
+
+Son máscaras talladas en madera, tradicionalmente usadas por sociedades iniciáticas y grupos de justicia ritual dentro de las comunidades Fang. La más conocida es la máscara Ngil, con forma ovalada y rasgos estilizados.
+Características principales
+<br>
+
+
+Las máscaras Fang suelen tener:
+
+Rostro ovalado, alargado.
+
+Expresión serena o neutra.
+
+Ojos estrechos y alargados.
+
+Nariz larga y recta.
+
+Boca pequeña.
+
+Pintura blanca hecha con caolín (símbolo de pureza y espiritualidad).
+
+Capas de líneas negras o marcas geométricas.
+<br>
+
+Su apariencia austera e impecable fue muy influyente para el arte moderno europeo (ej. Picasso).
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 25 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Gabón, Guinea, Camerún</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
