--- a/piezasmascarahtml/pieza_mascara25.html
+++ b/piezasmascarahtml/pieza_mascara25.html
@@ -27,15 +27,21 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Zaolí</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+         La máscara Zaouli es una de las más famosas de África Occidental y pertenece al pueblo Guro (o Gouro) de Costa de Marfil. Está estrechamente ligada a la danza Zaouli, considerada una de las más rápidas, virtuosas y espectaculares del continente.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+          Es una máscara femenina usada por bailarines hombres durante la danza Zaouli.
+
+          Representa un ideal de belleza dentro de la cultura Guro:
+          rasgos finos, simetría, peinados elaborados y refinamiento espiritual.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 30 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Costa de Marfil</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
